# voxleaf

./: .editorconfig  .gitignore  .prettierignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SCAFFOLD-MANIFEST.md  SECURITY.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.base.json  tsconfig.json
.agents/: PLANS.md
.agents/skills/implement-feature/: SKILL.md
.agents/skills/investigate-bug/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: foundation-checks.yml
apps/desktop/: index.html  package.json  playwright.benchmark.config.ts  playwright.config.ts  tsconfig.json  vite.config.ts
apps/desktop/scripts/: native-startup-smoke.mjs  native-webdriver-client.mjs  native-webdriver-client.node-test.mjs
apps/desktop/src/: App.test.tsx  App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
docs/: README.md
docs/architecture/: overview.md  performance-budget.md  system-diagram.md
docs/architecture/decisions/: ADR-0001-local-first-desktop.md  ADR-0002-in-memory-audio.md  ADR-0003-stable-reading-locators.md  ADR-0004-start-after-audio-lead.md  ADR-0005-engineering-workspace-and-quality-tooling.md  ADR-0006-json-schema-contract-authority.md  ADR-0007-secure-epub-ingestion-boundary.md  README.md  (+4 more)
docs/development/: dependencies.md  git-workflow.md  setup.md  testing.md
docs/plans/: roadmap.md
docs/product/: glossary.md  mvp.md  project-brief.md  vision.md
services/tts/: pyproject.toml
services/tts/src/voxleaf_tts/: __init__.py
services/tts/tests/: test_contract_conformance.py  test_health.py
(+61 files in other folders)
