[build-system]
requires = ["uv_build>=0.11.29,<0.12"]
build-backend = "uv_build"

[project]
name = "voxleaf-tts"
version = "0.0.0"
description = "Local TTS service foundation for VoxLeaf"
requires-python = ">=3.12,<3.13"
dependencies = []

[dependency-groups]
dev = [
    "jsonschema>=4.25,<5",
    "mypy>=2.3.0,<3",
    "pytest>=9.1.1,<10",
    "ruff>=0.15.22,<0.16",
    "types-jsonschema>=4.26,<5",
]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]
