[package]
name = "voxleaf-desktop"
version = "0.0.0"
description = "Native shell for the VoxLeaf desktop application"
edition = "2024"
rust-version = "1.97.1"
publish = false

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
tauri = { version = "=2.11.5", features = [] }
